# notebooks

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
books/파이썬 머신러닝 완벽 가이드/: README.md
books/파이썬 머신러닝 완벽 가이드/9장 - 추천 시스템/: 9.5. 콘텐츠 기반 필터링 실습 - TMDB 5000 영화 데이터 세트.ipynb  9.6. 아이템 기반 최근접 이웃 협업 필터링 실습.ipynb  CONTENTS.md
practice/: getting_started.ipynb
