[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "https://github.com/ohing504/notebooks.git"
authors = ["Youngsup Oh <ohing504@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

numpy = "^1.19.1"
pandas = "^1.1.0"
scikit-surprise = "^1.1.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
notebook = "^6.1.1"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
